--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
+    @using System.Linq;
 
 }
 
@@ -42,15 +43,25 @@
             </div>
             <button class="btn btn-primary" type="submit">Upload</button>
         </form>
+        @if (TempData.ContainsKey("Message"))
+        {
+            if (TempData["Message"].ToString().Contains("successfully"))
+            {
+                <div id="message" class="alert alert-success mt-3" role="alert">
+                    @TempData["Message"]
+                </div>
+            }
+            else
+            {
+                <div id="message" class="alert alert-danger mt-3" role="alert">
+                    @TempData["Message"]
+                </div>
+            }
+        }
     </div>
 </div>
 
-@if (TempData.ContainsKey("Message"))
-{
-    <div id="message" class="alert alert-danger mt-3" role="alert">
-        @TempData["Message"]
-    </div>
-}
+
 
 @*Image upload*@
 
