fully implemented user image uploading and displaying as avatar

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
     <footer id="footer" class="bg-light text-center">
         <p>
             Developed and designed by Doncho Donev
-            <img src="~/img/GitHub-Mark-32px.png" />
+            <img id="githubImage" src="~/img/GitHub-Mark-32px.png" />
         </p>
     </footer>
 </a>
