--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -2,7 +2,6 @@
 @using static ASP.NET_MVC_Forum.Data.DataConstants.RoleConstants;
 <link rel="stylesheet" href="~/css/postsAll.css" />
 
-
 @{
     if (TempData.ContainsKey("ErrorMessage"))
     {
@@ -33,8 +32,7 @@
                 </div>
                 <div class="card-header">
                     <div class="media flex-wrap w-100 align-items-center">
-                        <img src="~/img/defaultUserImage.png" class="d-block ui-w-40 rounded-circle" alt="">
-
+                        <img src="@post.UserImageUrl" class="avatarImage d-block ui-w-40 rounded-circle" alt="">
                         <div class="media-body ml-3">
                             <a href="javascript:void(0)" data-abc="true">@post.UserUsername</a>
                             <div class="text-muted small">@post.PostCreationDate</div>
