--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/wwwroot/css/footer.css
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/wwwroot/css/footer.css
@@ -7,7 +7,12 @@
     background: grey;
 }
 
-img {
+.avatarImage {
+    width: 50px;
+    height: 50px;
+}
+
+#githubImage {
     width: 20px;
     height: 20px;
 }
