removed unnecessary css added new css to reduce image size next to comment input to 30x30px update ViewPost.cshtml to show user image next to input field for comments

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -152,7 +152,7 @@
                 {
                     <form method="post" id="commentsForm">
                         <div class="d-flex flex-row add-comment-section mt-4 mb-4">
-                            <img class="avatarImage img-responsive rounded-circle mr-2" src="~/avatar/defaultUserImage.png" width="38">
+                            <img class="avatar-comment img-responsive rounded-circle mr-2" src="@currUserAvatar" width="30" height="30">
                             <input type="text" class="form-control mr-3" placeholder="Add comment" id="comment">
                             <button id="sendComment" class="btn btn-primary">Comment</button>
                         </div>
