fixed bug  where user could choose to upload an image without actually uploading anything which resulted in a null reference exception implemented the showing of user image in main navbar next to username changed allowed image formats to match the constraints of ImageSharp added new default user image

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <hr class="mt-4 mb-3" />
                 <h5 class="mb-3">User image</h5>
-                <input type="file" name="file" accept="image/png, image/jpeg, image/bmp, image/webp">
+                <input type="file" name="file" accept="image/png, image/jpeg, image/bmp, image/webp, image/svg+xml">
             </div>
             <button class="btn btn-primary" type="submit">Upload</button>
         </form>
