refactored controllers code

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -24,7 +24,7 @@
             <div class="card mb-4 mt-4">
                 <div class="card-footer align-items-center px-0 pt-0 pb-3">
                     <div class="px-2 pt-3 text-center">
-                        <a class="text-dark font-weight-bolder font-italic" asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@post.PostId" asp-route-postTitle="@post.Title ">@post.Title</a>
+                        <a class="text-dark font-weight-bolder font-italic" asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@post.PostId">@post.Title</a>
                     </div>
                 </div>
                 <div class="card-body mb-2" style="max-height:230px">
