--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -108,6 +108,7 @@
     <div id="layoutSidenav_content">
         <main>
             @RenderBody()
+            @RenderSection("Scripts")
         </main>
     </div>
 </div>
@@ -116,3 +117,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
 <script src="/js/scripts.js"></script>
+
+@section Scripts{
+    <script src="~/lib/Chart.js/chart.min.js"></script>
+    <script src="~/js/chart-js-setup.js"></script>
+}
