--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
-﻿<canvas id="myChart"></canvas>
+﻿<a asp-action="Index" asp-area="" asp-controller="Home"><i id="up" style="color:green"></i></a>
 
-
-
+<div class="chart-container" style="position: relative; ">
+    <canvas id="myChart"></canvas>
+</div>
+<div class="text-center pt-3">
+    <a type="button" id="download-chart-image" class="btn btn-primary col-10" href="">Download chart</a>
+</div>
 
 
 
