--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="chart-container" style="position: relative; ">
     <canvas id="myChart"></canvas>
 </div>
-<div class="text-center pt-3">
+<div class="text-center mt-3 mb-3">
     <a type="button" id="download-chart-image" class="btn btn-primary col-10" href="">Download chart</a>
 </div>
 
