fixed custom js code for chart.js bug where chart was working okay only on mobile devices

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿<a asp-action="Index" asp-area="" asp-controller="Home"><i id="up" style="color:green"></i></a>
-
-<div class="chart-container" style="position: relative; ">
-    <canvas id="myChart"></canvas>
-</div>
+﻿<canvas id="myChart"></canvas>
 <div class="text-center mt-3 mb-3">
     <a type="button" id="download-chart-image" class="btn btn-primary col-10" href="">Download chart</a>
 </div>
