--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -1,12 +1,21 @@
-﻿<canvas id="myChart"></canvas>
+﻿@model List<(string chartName, string url)>;
+
+<div class="m-1 text-center">
+    <select id="select-chart" onchange="getChart()" class="form-select bg-dark text-white text-center shadow" aria-label="Default select example">
+        <option value="@Model[0].url" selected>@Model[0].chartName</option>
+
+        @for (int i = 1; i < @Model.Count; i++)
+        {
+            <option value="@Model[i].url">@Model[i].chartName</option>
+        }
+
+    </select>
+</div>
+
+<canvas id="myChart"></canvas>
 <div class="text-center mt-3 mb-3">
     <a type="button" id="download-chart-image" class="btn btn-primary col-10" href="">Download chart</a>
 </div>
-
-
-
-
-
 
 @section Scripts{
     <script src="~/lib/Chart.js/chart.min.js"></script>
