--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -14,10 +14,12 @@
 
 <canvas id="myChart"></canvas>
 <div class="text-center mt-3 mb-3">
-    <a type="button" id="download-chart-image" class="btn btn-primary col-10" href="">Download chart</a>
+    <a type="button" id="download-chart-image" class="btn btn-primary col-10 visually-hidden" href="">Download chart</a>
 </div>
 
 @section Scripts{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/Chart.js/chart.min.js"></script>
     <script src="~/js/chart-js-setup.js"></script>
+
 }
