implemented dynamic generation of html list nodes showing post title and count of whatever is being counted with the title being a link to the post itself

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -12,10 +12,21 @@
     </select>
 </div>
 
+
+
 <canvas id="myChart"></canvas>
+
+<ul id="itemslist" class="list-group">
+</ul>
+
 <div class="text-center mt-3 mb-3">
     <a type="button" id="download-chart-image" class="btn btn-primary col-10 visually-hidden" href="">Download chart</a>
 </div>
+
+
+
+
+
 
 @section Scripts{
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
