made li nodes at admin dashboard clickable instead of just the post titles to make it more user-friendly made chart download button disabled before chart image is ready for download instead of hiding it entirely

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 </ul>
 
 <div class="text-center mt-3 mb-3">
-    <a type="button" id="download-chart-image" class="btn btn-primary col-10 visually-hidden" href="">Download chart</a>
+    <a type="button" id="download-chart-image" class="btn btn-primary col-10 disabled" href="">Download chart</a>
 </div>
 
 
