made admin dashboard sidebar close when clicked away from it as opposed to being closed just from the hamburger menu

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -105,13 +105,11 @@
             </div>
         </nav>
     </div>
-    <div id="layoutSidenav_content">
-        <button id="sidebarToggle" href="#!">
-            <main>
-                @RenderBody()
-                @RenderSection("Scripts")
-            </main>
-        </button>
+    <div id="layoutSidenav_content" href="#!">
+        <main>
+            @RenderBody()
+            @RenderSection("Scripts")
+        </main>
     </div>
 </div>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
