fixed bug where admin area sidebar would open and close on-click regardless of where the click was made

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
         </nav>
     </div>
     <div id="layoutSidenav_content" href="#!">
-        <main>
+        <main id="sidenav-content-hide">
             @RenderBody()
             @RenderSection("Scripts")
         </main>
