--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -17,6 +17,34 @@
     }
 }
 
+
+<form class="text-center">
+    <div class="form-row">
+        <div class="col-4">
+            <select class="form-select form-control w-100 text-center" onchange="this.form.submit()" aria-label="Default select example">
+                <option selected>Order By</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+        </div>
+        <div class="col-3">
+            <select class="form-select form-control w-100 text-center" onchange="this.form.submit()" aria-label="Default select example">
+                <option selected value="Descending">Descending</option>
+                <option value="Ascending">Ascending</option>
+            </select>
+        </div>
+        <div class="col-3">
+            <input class="form-control" type="search" placeholder="post name..." aria-label="Search">
+        </div>
+        <div class="col-1">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </div>
+
+    </div>
+</form>
+
+
 <div class="row">
     @foreach (var post in Model)
     {
