--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -18,29 +18,28 @@
 }
 
 
-<form class="text-center">
+<form method="get" asp-area="" asp-controller="Home" asp-action="Index">
     <div class="form-row">
         <div class="col-4">
-            <select class="form-select form-control w-100 text-center" onchange="this.form.submit()" aria-label="Default select example">
-                <option selected>Order By</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+            <select asp-items=@ViewBag.SortTypeLibrary name="sortType" class="form-select form-control w-100" onchange="this.form.submit()" aria-label="Default select example">
             </select>
         </div>
-        <div class="col-3">
-            <select class="form-select form-control w-100 text-center" onchange="this.form.submit()" aria-label="Default select example">
-                <option selected value="Descending">Descending</option>
-                <option value="Ascending">Ascending</option>
+        <div class="col-4">
+            <select asp-items=@ViewBag.SortOrderOptions name="sortOrder" class="form-select form-control w-100" onchange="this.form.submit()" aria-label="Default select example">
             </select>
         </div>
-        <div class="col-3">
-            <input class="form-control" type="search" placeholder="post name..." aria-label="Search">
+        <div class="col-4">
+            <select asp-items=@ViewBag.CategoryNames name="category" class="form-select form-control w-100" onchange="this.form.submit()" aria-label="Default select example">
+            </select>
         </div>
-        <div class="col-1">
+    </div>
+    <div class="form-row mt-3">
+        <div class="col-10">
+            <input name="searchTerm" value="@ViewBag.SearchTerm" class="form-control" type="search" placeholder="post name..." aria-label="Search">
+        </div>
+        <div class="col-2 text-center">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </div>
-
     </div>
 </form>
 
