updated post preview view so it looks okay on mobile

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -34,10 +34,10 @@
         </div>
     </div>
     <div class="form-row mt-3">
-        <div class="col-10">
+        <div class="col-md-10 col-9">
             <input name="searchTerm" value="@ViewBag.SearchTerm" class="form-control" type="search" placeholder="post name..." aria-label="Search">
         </div>
-        <div class="col-2 text-center">
+        <div class="col-md-2 col-3 text-center">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </div>
     </div>
