--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_Layout.cshtml
@@ -12,7 +12,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASP.NET Forum</a>
+                <a class="mb-1 text-decoration-none col-9 text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img id="site-logo" src="~/img/logo.svg"> ASP.NET Core Forum
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,7 +22,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="All">Categories</a>
+                            
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -28,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container mr-0">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
