--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/wwwroot/css/site.css
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/wwwroot/css/site.css
@@ -69,3 +69,24 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+@media (max-width: 576px) {
+    #site-logo {
+        width: 12%;
+        height: 12%;
+    }
+}
+
+@media (min-width: 576px) {
+    #site-logo {
+        width: 8%;
+        height: 8%;
+    }
+}
+@media (min-width: 768px) {
+    #site-logo {
+        width: 7%;
+        height: 7%;
+    }
+}
