--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -1,5 +1,6 @@
-﻿@model List<ASP.NET_MVC_Forum.Models.Post.PostPreviewViewModel>;
-@using static ASP.NET_MVC_Forum.Data.DataConstants.RoleConstants;
+﻿@using static ASP.NET_MVC_Forum.Data.DataConstants.RoleConstants;
+@using ASP.NET_MVC_Forum.Models.Post;
+@model ASP.NET_MVC_Forum.Models.PaginatedList<PostPreviewViewModel>
 <link rel="stylesheet" href="~/css/postsAll.css" />
 
 @{
@@ -15,29 +16,36 @@
             @TempData["Message"]
         </div>
     }
+
+    var previousDisabled = !Model.HasPreviousPage ? "disabled border" : "border-dark";
+    var nextDisabled = !Model.HasNextPage ? "disabled border" : "border-dark";
 }
 
 
 <form method="get" asp-area="" asp-controller="Home" asp-action="Index">
     <div class="form-row">
         <div class="col-4">
-            <select asp-items=@ViewBag.SortTypeLibrary name="sortType" class="form-select form-control w-100" onchange="this.form.submit()" aria-label="Default select example">
+            <select asp-items=@ViewBag.SortTypeLibrary name="sortType" class="form-select form-control" onchange="this.form.submit()">
             </select>
         </div>
         <div class="col-4">
-            <select asp-items=@ViewBag.SortOrderOptions name="sortOrder" class="form-select form-control w-100" onchange="this.form.submit()" aria-label="Default select example">
+            <select asp-items=@ViewBag.SortOrderOptions name="sortOrder" class="form-select form-control" onchange="this.form.submit()">
             </select>
         </div>
         <div class="col-4">
-            <select asp-items=@ViewBag.CategoryNames name="category" class="form-select form-control w-100" onchange="this.form.submit()" aria-label="Default select example">
+            <select asp-items=@ViewBag.CategoryNames name="category" class="form-select form-control" onchange="this.form.submit()">
             </select>
         </div>
     </div>
-    <div class="form-row mt-3">
-        <div class="col-md-10 col-9">
-            <input name="searchTerm" value="@ViewBag.SearchTerm" class="form-control" type="search" placeholder="post name..." aria-label="Search">
+    <div class="form-row mt-3 text-center">
+        <div class="col-lg-1 col-md-1 col-sm-3 m-1">
+            <select asp-items=@ViewBag.ViewCountOptions name="viewCount" class="form-select form-control text-center" onchange="this.form.submit()">
+            </select>
         </div>
-        <div class="col-md-2 col-3 text-center">
+        <div class="col-lg-9 col-md-9 col-sm-5 m-1">
+            <input name="searchTerm" value="@ViewBag.SearchTerm" class="form-control text-center" type="search" placeholder="post name..." aria-label="Search">
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-3 m-1">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </div>
     </div>
@@ -128,4 +136,19 @@
             </div>
         </div>
     }
+</div>
+
+<div class="form-row text-center">
+    <div class="col-12">
+        <a asp-action="Index"
+           asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default @previousDisabled w-50">
+            <i class="bi bi-arrow-left"></i> Previous 
+        </a>
+        <div class="col-12 mt-4">
+            <a asp-action="Index"
+               asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default @nextDisabled w-50">
+                Next <i class="bi bi-arrow-right"></i>
+            </a>
+        </div>
+    </div>
 </div>
