--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_Layout.cshtml
@@ -22,7 +22,6 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -44,17 +43,18 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/signalr/signalr.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 
 
-<a class="text-decoration-none text-dark" href="https://github.com/donchodonev/ASP.NET-MVC-Forum">
-    <footer id="footer" class="bg-light text-center">
-        <p>
-            Developed and designed by Doncho Donev
-            <img id="githubImage" src="~/img/GitHub-Mark-32px.png" />
-        </p>
-    </footer>
-</a>
+    <a class="text-decoration-none text-dark" href="https://github.com/donchodonev/ASP.NET-MVC-Forum">
+        <footer id="footer" class="bg-light text-center">
+            <p>
+                Developed and designed by Doncho Donev
+                <img id="githubImage" src="~/img/GitHub-Mark-32px.png" />
+            </p>
+        </footer>
+    </a>
 </body>
 </html>
