fixed a bug where in admin dashboard after going through different pages part of the admin area - admin area got used as default area in all urls making chart links to posts result in a 404
updated background color in admin/commentreports page

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -105,8 +105,8 @@
             </div>
         </nav>
     </div>
-    <div id="layoutSidenav_content" href="#!">
-        <main id="sidenav-content-hide">
+    <div id="layoutSidenav_content" class="bg-dark" href="#!">
+        <main id="sidenav-content-hide" class="bg-dark">
             @RenderBody()
             @RenderSection("Scripts")
         </main>
