--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
@@ -10,13 +10,13 @@
     @foreach (var report in @Model)
     {
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-            <div class="card text-center border-right border-left border-dark">
-                <div class="card-body d-flex flex-column" style="min-height:180px">
-                    <p class="card-text text-danger">Profane words found in comment content: @report.ShortReason...</p>
+            <div class="card text-center border-dark">
+                <div class="card-body d-flex flex-column bg-dark border border-white border" style="min-height:180px">
+                    <p class="card-text text-white">Profane words found in comment content: <span class="text-danger">@report.ShortReason...</span></p>
 
                     <!-- Button trigger modal -->
 
-                    <button type="button" class="btn btn-primary mt-auto" data-toggle="modal" data-target="#reportId@(report.Id)">
+                    <button type="button" class="btn btn-primary mt-auto border border-white" data-toggle="modal" data-target="#reportId@(report.Id)">
                         View Report
                     </button>
 
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-footer text-muted bg-dark">
+                <div class="card-footer text-muted bg-dark border border-white">
                     <span class="text-light">@report.CreatedOnAsString</span>
                 </div>
             </div>
