updated views added feedback to admin showing a message which says that everything looks good when there are 0 reports found for either commments or posts

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark " id="sidenavAccordion">
-            <div class="sb-sidenav-menu">
+            <div class="sb-sidenav-menu shadow-right">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Core</div>
                     <a class="nav-link" href="/Admin/Home/Index">
