--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/CommentReports/Index.cshtml
@@ -6,6 +6,14 @@
     </div>
 }
 
+@if (Model.Count == 0)
+{
+    <div class="text-center text-white">
+        <h2>Everything looks good !</h2>
+        <h3>All reports are cleared !</h3>
+    </div>
+}
+
 <div class="row border-bottom-0 mr-0 mt-1 border-left justify-content-center">
     @foreach (var report in @Model)
     {
