--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/PostReports/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/PostReports/Index.cshtml
@@ -7,17 +7,27 @@
 }
 
 <div class="row border-bottom-0 mr-0 mt-1 border-left justify-content-center">
+
+    @if (Model.Count == 0)
+    {
+    <div class="text-center text-white">
+        <h2>Everything looks good !</h2>
+        <h3>All reports are cleared !</h3>
+    </div>
+    }
+
+
     @foreach (var report in @Model)
     {
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-            <div class="card text-center border-right border-left border-dark">
-                <div class="card-header bg-dark">
+            <div class="card text-center border border-dark">
+                <div class="card-header bg-dark border border-white">
                     <a asp-area="" asp-controller="Posts" asp-action="ViewPost" asp-route-postId="@report.PostId" asp-route-postTitle="@report.PostTitle" class="text-light text-decoration-none">
                         @report.PostShortTitle
                     </a>
                 </div>
-                <div class="card-body d-flex flex-column" style="min-height:180px">
-                    <p class="card-text">@report.ShortReason...</p>
+                <div class="card-body d-flex flex-column bg-dark border border-white" style="min-height:180px">
+                    <p class="card-text text-danger">@report.ShortReason...</p>
 
                     <!-- Button trigger modal -->
 
@@ -65,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-footer text-muted bg-dark">
+                <div class="card-footer text-muted bg-dark border border-white">
                     <span class="text-light">@report.CreatedOnAsString</span>
                 </div>
             </div>
