--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/Chat.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/Chat.cshtml
@@ -2,16 +2,12 @@
     this.ViewBag.Title = "Chat";
 }
 
-<h1>@this.ViewBag.Title</h1>
-
 <div class="container">
-    <div id="message-holder" class="mt-3 d-flex justify-content-start">
-        <h4>Message</h4>
+    <div id="messagesList" style="font-size: 28px;" class="mb-5 overflow-auto h-50">
+    </div>
+    <div id="message-holder" class="mt-3" style="position: fixed; bottom: 10%; width: 100%;">
         <input class="w-75 ml-4 pl-3" type="text" id="messageInput" placeholder="Message..." />
         <button id="sendButton" class="ml-4 btn btn-dark btn-lg">Send</button>
-    </div>
-    <hr style="height: 5px;" class="bg-dark" />
-    <div id="messagesList" style="font-size: 28px;">
     </div>
 </div>
 
@@ -26,9 +22,10 @@
             function (message) {
                 var chatInfo = `<div>[${message.user}]: ${message.text}</div>`;
                 $("#messagesList").append(chatInfo);
+                autoscroll();
             });
 
-        $("#sendButton").click(function() {
+        $("#sendButton").click(function () {
             var message = $("#messageInput").val();
             connection.invoke("Send", message);
             $("#messageInput").val("");
@@ -37,5 +34,15 @@
         connection.start().catch(function (err) {
             return console.error(err.toString());
         });
+
+
+        const autoscroll = () => {
+
+            const messages = document.querySelector('#messagesList');
+            const lastMessageHeight = messages.lastElementChild.scrollHeight;
+            window.scrollBy(0, lastMessageHeight + 50);
+        }
+
+
     </script>
 }
