--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/Chat.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/Chat.cshtml
@@ -5,9 +5,9 @@
 <div class="container">
     <div id="messagesList" style="font-size: 28px;" class="mb-5 overflow-auto h-50">
     </div>
-    <div id="message-holder" class="mt-3" style="position: fixed; bottom: 10%; width: 100%;">
-        <input class="w-75 ml-4 pl-3" type="text" id="messageInput" placeholder="Message..." />
-        <button id="sendButton" class="ml-4 btn btn-dark btn-lg">Send</button>
+    <div id="message-holder" class="container row mt-3 justify-content-center" style="width:100%;position: fixed; bottom: 10%;">
+        <input class="col-10" type="text" id="messageInput" placeholder="Message..." />
+        <button id="sendButton" class="ml-2 col-1 btn btn-dark ">Send</button>
     </div>
 </div>
 
@@ -42,7 +42,6 @@
             const lastMessageHeight = messages.lastElementChild.scrollHeight;
             window.scrollBy(0, lastMessageHeight + 50);
         }
-
 
     </script>
 }
