--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/SelectUser.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/SelectUser.cshtml
@@ -26,7 +26,7 @@
         </div>
         <div class="card-body text-center">
             <h5 class="card-title">@Model.Username</h5>
-            <a href="#" class="btn btn-primary">Chat</a>
+            <a asp-area="" asp-controller="Chat" asp-action="ChatConversation" asp-route-senderIdentityUserId="@Model.SenderIdentityUserId" asp-route-recipientIdentityUserId="@Model.RecipientIdentityUserId" class="btn btn-primary">Chat</a>
         </div>
     </div>
 </div>
