implemented showing time in newly sent messages

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/ChatConversation.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/ChatConversation.cshtml
@@ -33,7 +33,7 @@
 
         connection.on("ReceiveMessage",
             function (message) {
-                var chatInfo = `<div>[${message.sender}]: ${message.text}</div>`;
+                var chatInfo = `<div>[${message.time}] [${message.senderUsername}]: ${message.text}</div>`;
                 $("#messagesList").append(chatInfo);
                 autoscroll();
             });
