--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/ChatConversation.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/ChatConversation.cshtml
@@ -38,11 +38,22 @@
                 autoscroll();
             });
 
+        // Get the input field
+        var input = document.getElementById("messageInput");
 
+        // Execute a function when the user releases a key on the keyboard
+        input.addEventListener("keyup", function (event) {
+            // Number 13 is the "Enter" key on the keyboard
+            if (event.keyCode === 13) {
+                // Cancel the default action, if needed
+                event.preventDefault();
+                // Trigger the button element with a click
+                document.getElementById("sendButton").click();
+            }
+        });
 
         $("#sendButton").click(function () {
             var message = $("#messageInput").val();
-            console.log(message);
 
             connection.invoke(
                 "SendMessageToGroup",
