--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/ChatConversation.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/ChatConversation.cshtml
@@ -7,10 +7,14 @@
 <div class="container">
     <div id="messagesList" style="font-size: 28px;">
     </div>
-    <div class="mb-5 mt-5"></div>
-    <div id="message-holder" class="container row justify-content-center" style="width:100%; bottom: 10%;">
-        <input class="col-10 mt-3" type="text" id="messageInput" placeholder="Message..." />
-        <button id="sendButton" class="ml-2 col-1 btn btn-dark mt-3">Send</button>
+    <div class="mb-5 mt-5 text-center"></div>
+    <div id="message-holder" class="container justify-content-center p-0" style="width:100%; bottom: 10%;">
+        <div class="text-center">
+            <input class="mt-3 col-12" id="messageInput" placeholder="Message..." />
+        </div>
+        <div class="text-center mt-3">
+            <button id="sendButton" class=" col-3 btn btn-dark mt-3">Send</button>
+        </div>
     </div>
 </div>
 
