--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject ASP.NET_MVC_Forum.Services.User.IUserService userService;
 @{
     @using Microsoft.AspNetCore.Identity
-    @using static ASP.NET_MVC_Forum.Data.DataConstants.RoleConstants;
+    @using static ASP.NET_MVC_Forum.Data.Constants.DataConstants.RoleConstants;
     @using static ASP.NET_MVC_Forum.Infrastructure.Extensions.ClaimsPrincipalExtensions;
 }
 
