--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ASP.NET_MVC_Forum.Models.Post.ViewPostViewModel;
-@using static ASP.NET_MVC_Forum.Data.DataConstants.RoleConstants;
+@using static ASP.NET_MVC_Forum.Data.Constants.DataConstants.RoleConstants;
 @using static ASP.NET_MVC_Forum.Infrastructure.Extensions.ClaimsPrincipalExtensions;
 @inject ASP.NET_MVC_Forum.Services.User.IUserService userService;
 
