improved code quality by breaking down large constants class into smaller more cohesive classes which better describe themselves and hold only necessary data to themselves and their context of use

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using static ASP.NET_MVC_Forum.Data.Constants.DataConstants.RoleConstants;
+﻿@using static ASP.NET_MVC_Forum.Data.Constants.RoleConstants;
 @using ASP.NET_MVC_Forum.Models.Post;
 @model ASP.NET_MVC_Forum.Models.PaginatedList<PostPreviewViewModel>
 <link rel="stylesheet" href="~/css/postsAll.css" />
