--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using static ASP.NET_MVC_Forum.Data.Constants.DataConstants.RoleConstants;
+﻿@using static ASP.NET_MVC_Forum.Data.Constants.RoleConstants;
 
 <head>
     <meta charset="utf-8" />
