fixed bug where IAction result was never returned even though it was generated

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/SelectUser.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Chat/SelectUser.cshtml
@@ -1,9 +1,10 @@
 ﻿@model ASP.NET_MVC_Forum.Models.Chat.ChatSelectUserViewModel;
+@using static ASP.NET_MVC_Forum.Data.Constants.ClientMessage.MessageType; 
 
-@if (TempData["ErrorMessage"] != null)
+@if (TempData[ErrorMessage] != null)
 {
 <div class="alert alert-danger mt-2 mb-2 text-center" role="alert">
-    @TempData["ErrorMessage"]
+    @TempData[ErrorMessage]
 </div>}
 
 <form method="get" asp-controller="Chat" asp-action="SelectUser" asp-area="">
