refactored post controller fixed bug where user was not redirected with error message when he tries to edit or delete someone else's post

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -7,7 +7,7 @@
 @{
     if (TempData.ContainsKey(ErrorMessage))
     {
-        <div class="alert alert-warning" role="alert">
+        <div class="alert alert-warning text-center" role="alert">
             @TempData[ErrorMessage]
         </div>
     }
