moved post edit view model generation to post business service

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -13,7 +13,7 @@
     }
     else if (TempData.ContainsKey(SuccessMessage))
     {
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-success text-center" role="alert">
             @TempData[SuccessMessage]
         </div>
     }
